// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=0a3603151466d755fdc9",
    182,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 182,
    },
  ],
  [
    "main.js?var=0a3603151466d755fdc9",
    16585,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 16585,
    },
  ],
]
`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): errors 1`] = `[]`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js?ver=0a3603151466d755fdc9",
    182,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 182,
    },
  ],
  [
    "main.js?var=0a3603151466d755fdc9",
    16585,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 16585,
    },
  ],
]
`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): warnings 1`] = `[]`;

exports[`"test" option matches snapshot with empty \`test\` value: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "async.async.js?ver=0a3603151466d755fdc9",
    182,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "main.js.gz",
    4168,
    {
      "compressed": true,
      "immutable": true,
      "size": 4168,
    },
  ],
  [
    "main.js?var=0a3603151466d755fdc9",
    16585,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16585,
    },
  ],
]
`;

exports[`"test" option matches snapshot with empty \`test\` value: errors 1`] = `[]`;

exports[`"test" option matches snapshot with empty \`test\` value: warnings 1`] = `[]`;

exports[`"test" option should work when no asset to compress: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=0a3603151466d755fdc9",
    182,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 182,
    },
  ],
  [
    "main.js?var=0a3603151466d755fdc9",
    16585,
    {
      "fullhash": "0a3603151466d755fdc9",
      "immutable": true,
      "javascriptModule": false,
      "size": 16585,
    },
  ],
]
`;

exports[`"test" option should work when no asset to compress: errors 1`] = `[]`;

exports[`"test" option should work when no asset to compress: warnings 1`] = `[]`;
